# modal-transcribe

./: .gitignore  Notes.md  README.md  Todo.md  api.py  main.py  metadata.json  package-lock.json
app/: api.py  podcast.py  pyproject.toml  transcribe_check.py
app/bruno/: Podcast Endpoint.bru  Podcasts Endpoint.bru  README.md  Repopulate Metadata.bru
backend/: README.md  Tasks.md  __init__.py  _utils.py  config.py  main.py  pyproject.toml
backend/api/: __init__.py  main.py  utils.py
backend/api/diarised_transcribe/: routes.py  types.py
backend/api/podcast/: operators.py  routes.py  types.py
backend/api/podcast/functions/: episodes.py  helpers.py
backend/api/transcription_job/: routes.py  types.py
backend/app/: functions.py  image.py
backend/ops/: __init__.py  image.py  settings.py  storage.py  stub.py  types.py
backend/ops/__common__/: download.py  downloads.py  episodes.py
backend/ops/diarised_transcribe/: operators.py
backend/ops/podcast/: operators.py
backend/ops/transcription_job/: constants.py  operators.py
backend/src/: __init__.py  podcast.py
backend/src/diarised_transcribe/: diariser.py  transcriber.py  types.py
backend/src/podcast/: constants.py  types.py
backend/src/podcast/functions/: download.py  episodes.py  helpers.py  segments.py
backend/src/transcription_job/functions/: helpers.py  silences.py
bruno/: .gitignore  Diarise Job.bru  Diarised Transcribe Job.bru  Get Episode.bru  Poll Status.bru  Transcribe Job.bru  bruno.json
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
(+30 files in other folders)
